<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="not_rooted">您的电话没有获取Root！</string>
    <string name="spinner_loading">加载</string>
    <string name="text_editor_encoding">编码</string>
    <string name="text_editor_save">保存</string>
    <string name="text_editor_cancel">取消</string>
    <string name="text_editor_save_ask">是否要保存更改？</string>
    <string name="text_editor_save_ok">保存成功</string>
    <string name="text_editor_save_fail">保存失败</string>
    <string name="encoding">编码</string>
    <string name="settings_general_category">常规设置</string>
    <string name="settings_hiddenDir">显示点文件和隐藏文件</string>
    <string name="summary_hiddenDir">显示隐藏的目录和文件</string>
    <string name="settings_rootExplorer">R.E资源管理器</string>
    <string name="summary_rootExplorer">允许您访问和修改系统文件和目录</string>
    <string name="settings_about">关于</string>
    <string name="perm_owner">所有者</string>
    <string name="perm_group">所有者</string>
    <string name="perm_all">所有</string>
    <string name="perm_read">读取</string>
    <string name="perm_write">写</string>
    <string name="perm_exec">执行</string>
    <string name="mounted_ro">只安装为已读</string>
    <string name="mounted_rw">装载为读写</string>
    <string name="apply">应用</string>
    <string name="success">成功</string>
    <string name="failed">失败</string>
    <string name="ok">确定</string>
    <string name="enter_zip_name">输入 zip 名称</string>
    <string name="zip_name">Zip 名称</string>
    <string name="added_favorite">添加到收藏夹</string>
    <string name="app_name">小米文件管理器</string>
    <string name="cancel">取消</string>
    <string name="category_not_support">不支持</string>
    <string name="category_all">所有</string>
    <string name="category_apk">安装包</string>
    <string name="category_document">文档</string>
    <string name="category_favorite">最爱</string>
    <string name="category_music">音乐</string>
    <string name="category_other">其它</string>
    <string name="category_picture">图片</string>
    <string name="category_theme">主题</string>
    <string name="category_title">文件管理</string>
    <string name="category_video">视频</string>
    <string name="category_zip">压缩包</string>
    <string name="category_search">自定义</string>
    <string name="confirm">确定</string>
    <string name="confirm_know">确定</string>
    <string name="enable_sd_card">无可用SD卡，请插入或连接SD卡</string>
    <string name="error_info_cant_send_folder">无法发送文件夹</string>
    <string name="fail_to_create_folder">未能创建文件夹，该文件夹已经存在</string>
    <string name="fail_to_rename">无法重命名文件或文件夹，因为它已经存在</string>
    <string name="file_info_canread">可读：</string>
    <string name="file_info_canwrite">可写：</string>
    <string name="file_info_permission">权限：</string>
    <string name="file_info_ishidden">隐藏：</string>
    <string name="file_info_location">路径:</string>
    <string name="file_info_modified">修改日期：</string>
    <string name="file_info_size">大小：</string>
    <string name="file_size">%d 个字节</string>
    <string name="compress_failed">压缩失败</string>
    <string name="compress_successful">压缩成功</string>
    <string name="extract_failed">提取失败</string>
    <string name="extract_successful">提取成功</string>
    <string name="install_failed">安装失败</string>
    <string name="install_successful">安装成功</string>
    <string name="instruction">在您的 FTP 客户端输入以下地址：</string>
    <string name="instruction_pre">启动后可在电脑端远程管理手机文件</string>
    <string name="menu_item_search">搜索</string>
    <string name="menu_item_sort">排序方式</string>
    <string name="menu_item_sort_date">日期</string>
    <string name="menu_item_sort_name">名称</string>
    <string name="menu_item_sort_size">大小</string>
    <string name="menu_item_sort_type">类型</string>
    <string name="new_folder_name">新建文件夹</string>
    <string name="no">否</string>
    <string name="no_file">没有文件</string>
    <string name="no_wifi">没有Wifi网络</string>
    <string name="notif_server_starting">启动 FTP 服务器</string>
    <string name="notif_title">FTP 服务器</string>
    <string name="operation_cancel">取消</string>
    <string name="operation_cancel_selectall">取消选择所有</string>
    <string name="operation_copy">复制</string>
    <string name="operation_create_folder">新建文件夹</string>
    <string name="operation_create_folder_message">输入的文件夹名称</string>
    <string name="operation_delete">删除</string>
    <string name="operation_delete_confirm_message">确认删除吗？</string>
    <string name="operation_deleting">正在删除...</string>
    <string name="operation_favorite">添加到收藏夹</string>
    <string name="operation_hide_sys">显示隐藏的文件</string>
    <string name="operation_info">详细信息</string>
    <string name="operation_install">安装</string>
    <string name="operation_extract">提取</string>
    <string name="operation_move">移动</string>
    <string name="operation_moving">正在移动...</string>
    <string name="operation_perm">权限</string>
    <string name="operation_mount_ro">装载 R/O</string>
    <string name="operation_mount_rw">装载 R/W</string>
    <string name="operation_openas">作为打开...</string>
    <string name="operation_settings">设置</string>
    <string name="operation_zip">压缩</string>
    <string name="operation_paste">粘贴</string>
    <string name="operation_pasting">粘贴...</string>
    <string name="operation_refresh">刷新</string>
    <string name="operation_remove">删除</string>
    <string name="operation_rename">重命名</string>
    <string name="operation_rename_message">输入一个新名称</string>
    <string name="operation_selectall">选择全部</string>
    <string name="operation_send">发送</string>
    <string name="operation_show_sys">显示隐藏的文件</string>
    <string name="operation_unfavorite">从收藏夹中删除</string>
    <string name="removed_favorite">从收藏夹中删除</string>
    <string name="sd_card_available">可用空间：</string>
    <string name="sd_card_name">SD 卡：</string>
    <string name="sd_folder">SD 卡</string>
    <string name="search_hint">搜索文件</string>
    <string name="search_title">搜索文件</string>
    <string name="start_server">启动服务</string>
    <string name="stop_server">停止服务</string>
    <string name="storage_warning">外部存储不可用或无法读取</string>
    <string name="wifi_state">WLAN 状态</string>
    <string name="yes">是</string>
    <string name="dialog_select_type">选择文件类型</string>
    <string name="dialog_type_text">文本</string>
    <string name="dialog_type_audio">音频</string>
    <string name="dialog_type_video">视频</string>
    <string name="dialog_type_image">图像</string>
    <string name="dialog_type_choose_app">选择应用程序</string>
    <string name="favorite_photo">照片</string>
    <string name="favorite_sdcard">SD 卡</string>
    <string name="favorite_screen_cap">MIUI截屏</string>
    <string name="favorite_ringtone">铃声</string>
    <string name="internal_folder">内部</string>
    <string name="tab_category">分类浏览</string>
    <string name="tab_sd">SD卡</string>
    <string name="tab_remote">远程管理</string>
</resources>
