<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/file_browse_frame" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:id="@id/navigation_bar" android:background="@drawable/secondary_title_background" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <LinearLayout android:gravity="center_vertical" android:id="@id/current_path_pane" android:background="@drawable/path_pane_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxWidth="300.0dip">
                <LinearLayout android:gravity="center_vertical" android:id="@id/current_path_scroller" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:layout_weight="1.0">
                    <TextView android:ellipsize="start" android:id="@id/current_path_view" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" style="@style/TextAppearance.Preference.PrimaryItem" />
                </LinearLayout>
                <ImageView android:layout_gravity="center_vertical" android:id="@id/path_pane_arrow" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <ImageView android:layout_gravity="right|center" android:id="@id/path_pane_up_level" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:src="@drawable/path_up_level" />
    </LinearLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <ListView android:id="@id/file_path_list" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fastScrollEnabled="true" android:headerDividersEnabled="true" android:footerDividersEnabled="true" style="@style/Theme.SearchBar" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/empty_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/empty_icon" />
            <TextView android:textSize="27.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_file" android:singleLine="true" />
        </LinearLayout>
        <ScrollView android:id="@id/dropdown_navigation" android:background="@drawable/dropdown" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@id/dropdown_navigation_list" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </ScrollView>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/sd_not_available_page" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="25.0px" android:src="@drawable/sd_not_available" />
            <TextView android:textSize="22.0px" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enable_sd_card" />
        </LinearLayout>
    </FrameLayout>
    <LinearLayout android:id="@id/moving_operation_bar" android:visibility="gone" style="@style/BottomButtonBar">
        <Button android:id="@id/button_moving_confirm" android:text="@string/operation_paste" style="@style/BottomButton.Left" />
        <Button android:id="@id/button_moving_cancel" android:text="@string/operation_cancel" style="@style/BottomButton.Right" />
    </LinearLayout>
    <LinearLayout android:id="@id/pick_operation_bar" android:visibility="gone" style="@style/BottomButtonBar">
        <Button android:id="@id/button_pick_confirm" android:text="@string/confirm" style="@style/BottomButton.Left" />
        <Button android:id="@id/button_pick_cancel" android:text="@string/operation_cancel" style="@style/BottomButton.Right" />
    </LinearLayout>
    <android.mywidget.GroupView android:id="@id/operation_bar" android:background="@drawable/operation_bar_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/button_operation_delete" android:text="@string/operation_delete" android:drawableTop="@drawable/operation_button_delete" style="@style/FileViewOperationButtonStytle" />
        <TextView android:id="@id/button_operation_copy" android:text="@string/operation_copy" android:drawableTop="@drawable/operation_button_copy" style="@style/FileViewOperationButtonStytle" />
        <TextView android:id="@id/button_operation_move" android:text="@string/operation_move" android:drawableTop="@drawable/operation_button_move" style="@style/FileViewOperationButtonStytle" />
        <TextView android:id="@id/button_operation_rename" android:text="@string/operation_rename" android:drawableTop="@drawable/operation_button_rename" style="@style/FileViewOperationButtonStytle" />
        <TextView android:id="@id/button_operation_zip" android:text="@string/operation_zip" android:drawableTop="@drawable/operation_button_zip" style="@style/FileViewOperationButtonStytle" />
        <TextView android:id="@id/button_operation_send" android:text="@string/operation_send" android:drawableTop="@drawable/operation_button_send" style="@style/FileViewOperationButtonStytle" />
        <TextView android:id="@id/button_operation_cancel" android:text="@string/operation_cancel" android:drawableTop="@drawable/operation_button_cancel" style="@style/FileViewOperationButtonStytle" />
    </android.mywidget.GroupView>
</LinearLayout>