<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center" android:paddingLeft="60.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textAppearance="@style/TextAppearance.Preference.SecondaryItem" android:layout_gravity="center" android:layout_width="60.0dip" android:layout_height="wrap_content" android:text="@string/perm_read" />
        <TextView android:textAppearance="@style/TextAppearance.Preference.SecondaryItem" android:layout_gravity="center" android:layout_width="60.0dip" android:layout_height="wrap_content" android:text="@string/perm_write" />
        <TextView android:textAppearance="@style/TextAppearance.Preference.SecondaryItem" android:layout_gravity="center" android:layout_width="60.0dip" android:layout_height="wrap_content" android:text="@string/perm_exec" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textAppearance="@style/TextAppearance.Preference.SecondaryItem" android:gravity="right" android:layout_width="60.0dip" android:layout_height="wrap_content" android:text="@string/perm_owner" />
        <CheckBox android:id="@id/user_r" android:layout_width="60.0dip" android:layout_height="wrap_content" android:checked="false" style="@style/Widget.CompoundButton.CheckBox" />
        <CheckBox android:id="@id/user_w" android:layout_width="60.0dip" android:layout_height="wrap_content" android:checked="false" style="@style/Widget.CompoundButton.CheckBox" />
        <CheckBox android:id="@id/user_x" android:layout_width="60.0dip" android:layout_height="wrap_content" android:checked="false" style="@style/Widget.CompoundButton.CheckBox" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textAppearance="@style/TextAppearance.Preference.SecondaryItem" android:gravity="right" android:layout_width="60.0dip" android:layout_height="wrap_content" android:text="@string/perm_group" />
        <CheckBox android:id="@id/group_r" android:layout_width="60.0dip" android:layout_height="wrap_content" android:checked="false" style="@style/Widget.CompoundButton.CheckBox" />
        <CheckBox android:id="@id/group_w" android:layout_width="60.0dip" android:layout_height="wrap_content" android:checked="false" style="@style/Widget.CompoundButton.CheckBox" />
        <CheckBox android:id="@id/group_x" android:layout_width="60.0dip" android:layout_height="wrap_content" android:checked="false" style="@style/Widget.CompoundButton.CheckBox" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textAppearance="@style/TextAppearance.Preference.SecondaryItem" android:gravity="right" android:layout_width="60.0dip" android:layout_height="wrap_content" android:text="@string/perm_all" />
        <CheckBox android:id="@id/all_r" android:layout_width="60.0dip" android:layout_height="wrap_content" android:checked="false" style="@style/Widget.CompoundButton.CheckBox" />
        <CheckBox android:id="@id/all_w" android:layout_width="60.0dip" android:layout_height="wrap_content" android:checked="false" style="@style/Widget.CompoundButton.CheckBox" />
        <CheckBox android:id="@id/all_x" android:layout_width="60.0dip" android:layout_height="wrap_content" android:checked="false" style="@style/Widget.CompoundButton.CheckBox" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:layout_gravity="center_vertical" android:id="@id/set_perm_ok" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/apply" android:layout_weight="1.0" style="@style/BottomButton.Left" />
        <Button android:layout_gravity="center_vertical" android:id="@id/set_perm_cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" style="@style/BottomButton.Right" />
    </LinearLayout>
</LinearLayout>